@@ -373,11 +373,18 @@ ESExpResult *func_undecorate(ESExp *f, int argc, ESExpResult **argv, Context *c)
   hints.decorations = 0;
 
   my_wnck_error_trap_push ();
-
+  
+  /* Set Motif hints, most window managers handle these */
   XChangeProperty(GDK_DISPLAY(), wnck_window_get_xid (c->window),
                   my_wnck_atom_get ("_MOTIF_WM_HINTS"), 
                   XA_ATOM, 32, PropModeReplace, 
                   (unsigned char *)&hints, PROP_MOTIF_WM_HINTS_ELEMENTS);
+
+  /* Apart from OpenBox, which doesn't respect it changing after mapping.
+     Instead it has this workaround. */
+  my_wnck_change_state (my_wnck_window_get_xscreen(c->window),
+                        wnck_window_get_xid(c->window), TRUE,
+                        my_wnck_atom_get ("_OB_WM_STATE_UNDECORATED"), 0);
 
   if (my_wnck_error_trap_pop () != 0) {
     g_printerr(_("Removing decorations failed"));
